--- a/Project_4_ProcrastPro_app/Project6_2022.12.04_ver4_final.ipynb
+++ b/Project_4_ProcrastPro_app/Project6_2022.12.04_ver4_final.ipynb
@@ -82,10 +82,7 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import matplotlib.ticker as ticker\n",
     "import numpy as np\n",
-    "from scipy import stats as st\n",
     "from datetime import datetime, timedelta"
    ]
   },
@@ -189,46 +186,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>559</th>\n",
-       "      <td>2019-05-20</td>\n",
-       "      <td>TipTop</td>\n",
-       "      <td>110.20</td>\n",
+       "      <th>210</th>\n",
+       "      <td>2019-05-31</td>\n",
+       "      <td>MediaTornado</td>\n",
+       "      <td>5.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>2019-07-27</td>\n",
-       "      <td>FaceBoom</td>\n",
-       "      <td>204.60</td>\n",
+       "      <th>1217</th>\n",
+       "      <td>2019-09-15</td>\n",
+       "      <td>LeapBob</td>\n",
+       "      <td>8.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>943</th>\n",
-       "      <td>2019-06-13</td>\n",
-       "      <td>AdNonSense</td>\n",
+       "      <th>1209</th>\n",
+       "      <td>2019-09-07</td>\n",
+       "      <td>LeapBob</td>\n",
        "      <td>9.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>378</th>\n",
-       "      <td>2019-05-19</td>\n",
-       "      <td>RocketSuperAds</td>\n",
-       "      <td>24.57</td>\n",
+       "      <th>172</th>\n",
+       "      <td>2019-10-20</td>\n",
+       "      <td>FaceBoom</td>\n",
+       "      <td>225.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>2019-08-13</td>\n",
-       "      <td>FaceBoom</td>\n",
-       "      <td>161.70</td>\n",
+       "      <th>645</th>\n",
+       "      <td>2019-08-14</td>\n",
+       "      <td>TipTop</td>\n",
+       "      <td>306.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             dt         Channel   costs\n",
-       "559  2019-05-20          TipTop  110.20\n",
-       "87   2019-07-27        FaceBoom  204.60\n",
-       "943  2019-06-13      AdNonSense    9.45\n",
-       "378  2019-05-19  RocketSuperAds   24.57\n",
-       "104  2019-08-13        FaceBoom  161.70"
+       "              dt       Channel   costs\n",
+       "210   2019-05-31  MediaTornado    5.76\n",
+       "1217  2019-09-15       LeapBob    8.19\n",
+       "1209  2019-09-07       LeapBob    9.45\n",
+       "172   2019-10-20      FaceBoom  225.50\n",
+       "645   2019-08-14        TipTop  306.00"
       ]
      },
      "metadata": {},
@@ -374,33 +371,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>30163</th>\n",
-       "      <td>878272987023</td>\n",
-       "      <td>2019-06-29 19:54:07</td>\n",
+       "      <th>36755</th>\n",
+       "      <td>200890591968</td>\n",
+       "      <td>2019-09-27 05:01:11</td>\n",
        "      <td>4.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16019</th>\n",
-       "      <td>731110616083</td>\n",
-       "      <td>2019-09-03 14:17:25</td>\n",
+       "      <th>34487</th>\n",
+       "      <td>1807144942</td>\n",
+       "      <td>2019-09-01 16:55:28</td>\n",
        "      <td>4.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10161</th>\n",
-       "      <td>318964015484</td>\n",
-       "      <td>2019-07-31 12:57:01</td>\n",
+       "      <th>19678</th>\n",
+       "      <td>808125544336</td>\n",
+       "      <td>2019-09-23 21:08:30</td>\n",
        "      <td>4.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11422</th>\n",
-       "      <td>798778681086</td>\n",
-       "      <td>2019-08-08 06:14:14</td>\n",
+       "      <th>21126</th>\n",
+       "      <td>9098462479</td>\n",
+       "      <td>2019-09-30 16:51:30</td>\n",
        "      <td>4.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9576</th>\n",
-       "      <td>204634485980</td>\n",
-       "      <td>2019-07-27 08:52:55</td>\n",
+       "      <th>21986</th>\n",
+       "      <td>338491430317</td>\n",
+       "      <td>2019-10-04 01:21:39</td>\n",
        "      <td>4.99</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -409,11 +406,11 @@
       ],
       "text/plain": [
        "            User Id             Event Dt  Revenue\n",
-       "30163  878272987023  2019-06-29 19:54:07     4.99\n",
-       "16019  731110616083  2019-09-03 14:17:25     4.99\n",
-       "10161  318964015484  2019-07-31 12:57:01     4.99\n",
-       "11422  798778681086  2019-08-08 06:14:14     4.99\n",
-       "9576   204634485980  2019-07-27 08:52:55     4.99"
+       "36755  200890591968  2019-09-27 05:01:11     4.99\n",
+       "34487    1807144942  2019-09-01 16:55:28     4.99\n",
+       "19678  808125544336  2019-09-23 21:08:30     4.99\n",
+       "21126    9098462479  2019-09-30 16:51:30     4.99\n",
+       "21986  338491430317  2019-10-04 01:21:39     4.99"
       ]
      },
      "metadata": {},
@@ -556,68 +553,68 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>28343</th>\n",
-       "      <td>633742538705</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Android</td>\n",
-       "      <td>TipTop</td>\n",
-       "      <td>2019-05-29 04:43:12</td>\n",
-       "      <td>2019-05-29 05:07:29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>280812</th>\n",
-       "      <td>909677423232</td>\n",
-       "      <td>UK</td>\n",
+       "      <th>307161</th>\n",
+       "      <td>150451478871</td>\n",
+       "      <td>Germany</td>\n",
        "      <td>PC</td>\n",
-       "      <td>OppleCreativeMedia</td>\n",
-       "      <td>2019-09-17 00:57:29</td>\n",
-       "      <td>2019-09-17 01:16:35</td>\n",
+       "      <td>AdNonSense</td>\n",
+       "      <td>2019-10-25 13:29:48</td>\n",
+       "      <td>2019-10-25 13:33:32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81126</th>\n",
-       "      <td>327739919627</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>iPhone</td>\n",
-       "      <td>organic</td>\n",
-       "      <td>2019-07-20 07:31:15</td>\n",
-       "      <td>2019-07-20 07:46:03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192707</th>\n",
-       "      <td>760253425950</td>\n",
-       "      <td>United States</td>\n",
+       "      <th>283335</th>\n",
+       "      <td>395007548122</td>\n",
+       "      <td>France</td>\n",
        "      <td>Android</td>\n",
        "      <td>organic</td>\n",
-       "      <td>2019-10-19 03:49:59</td>\n",
-       "      <td>2019-10-19 03:58:05</td>\n",
+       "      <td>2019-09-21 20:37:38</td>\n",
+       "      <td>2019-09-21 20:59:45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>161940</th>\n",
-       "      <td>605394818892</td>\n",
+       "      <th>51219</th>\n",
+       "      <td>146644042958</td>\n",
        "      <td>United States</td>\n",
        "      <td>Mac</td>\n",
-       "      <td>organic</td>\n",
-       "      <td>2019-09-27 13:30:44</td>\n",
-       "      <td>2019-09-27 13:42:47</td>\n",
+       "      <td>FaceBoom</td>\n",
+       "      <td>2019-06-23 20:55:22</td>\n",
+       "      <td>2019-06-23 21:35:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115422</th>\n",
+       "      <td>437643728829</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>iPhone</td>\n",
+       "      <td>TipTop</td>\n",
+       "      <td>2019-08-20 10:21:39</td>\n",
+       "      <td>2019-08-20 10:40:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179793</th>\n",
+       "      <td>666254809456</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>iPhone</td>\n",
+       "      <td>FaceBoom</td>\n",
+       "      <td>2019-10-09 07:10:17</td>\n",
+       "      <td>2019-10-09 07:20:38</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             User Id         Region   Device             Channel  \\\n",
-       "28343   633742538705  United States  Android              TipTop   \n",
-       "280812  909677423232             UK       PC  OppleCreativeMedia   \n",
-       "81126   327739919627  United States   iPhone             organic   \n",
-       "192707  760253425950  United States  Android             organic   \n",
-       "161940  605394818892  United States      Mac             organic   \n",
+       "             User Id         Region   Device     Channel        Session Start  \\\n",
+       "307161  150451478871        Germany       PC  AdNonSense  2019-10-25 13:29:48   \n",
+       "283335  395007548122         France  Android     organic  2019-09-21 20:37:38   \n",
+       "51219   146644042958  United States      Mac    FaceBoom  2019-06-23 20:55:22   \n",
+       "115422  437643728829  United States   iPhone      TipTop  2019-08-20 10:21:39   \n",
+       "179793  666254809456  United States   iPhone    FaceBoom  2019-10-09 07:10:17   \n",
        "\n",
-       "              Session Start          Session End  \n",
-       "28343   2019-05-29 04:43:12  2019-05-29 05:07:29  \n",
-       "280812  2019-09-17 00:57:29  2019-09-17 01:16:35  \n",
-       "81126   2019-07-20 07:31:15  2019-07-20 07:46:03  \n",
-       "192707  2019-10-19 03:49:59  2019-10-19 03:58:05  \n",
-       "161940  2019-09-27 13:30:44  2019-09-27 13:42:47  "
+       "                Session End  \n",
+       "307161  2019-10-25 13:33:32  \n",
+       "283335  2019-09-21 20:59:45  \n",
+       "51219   2019-06-23 21:35:18  \n",
+       "115422  2019-08-20 10:40:24  \n",
+       "179793  2019-10-09 07:20:38  "
       ]
      },
      "metadata": {},
@@ -719,24 +716,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>223605</th>\n",
-       "      <td>67003681792</td>\n",
-       "      <td>France</td>\n",
-       "      <td>PC</td>\n",
+       "      <th>191385</th>\n",
+       "      <td>739552515822</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Mac</td>\n",
        "      <td>organic</td>\n",
-       "      <td>2019-06-02 00:55:32</td>\n",
-       "      <td>2019-06-02 00:59:25</td>\n",
+       "      <td>2019-10-18 10:42:58</td>\n",
+       "      <td>2019-10-18 10:54:58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            user_id  region device  channel        session_start  \\\n",
-       "223605  67003681792  France     PC  organic  2019-06-02 00:55:32   \n",
+       "             user_id         region device  channel        session_start  \\\n",
+       "191385  739552515822  United States    Mac  organic  2019-10-18 10:42:58   \n",
        "\n",
        "                session_end  \n",
-       "223605  2019-06-02 00:59:25  "
+       "191385  2019-10-18 10:54:58  "
       ]
      },
      "execution_count": 9,
